--- a/BlindConfigurationTester/StudySetupControl.xaml
+++ b/BlindConfigurationTester/StudySetupControl.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="BlindConfigurationTester.ConfigurationControl"
+﻿<UserControl x:Class="BlindConfigurationTester.StudySetupControl"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -8,6 +8,7 @@
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="auto" />
+            <ColumnDefinition  Width="auto" />
             <ColumnDefinition  Width="auto" />
             <ColumnDefinition  Width="auto" />
             <ColumnDefinition  Width="auto" />
@@ -28,19 +29,14 @@
             <RowDefinition Height="auto"/>
         </Grid.RowDefinitions>
 
-        <TextBlock Grid.Row="0" Grid.Column="0">Configuration</TextBlock>
-        <ComboBox Grid.Row="0" Grid.Column="1" SelectedIndex="0" Name="Combo_Configuration">
-            <ComboBoxItem>User Data</ComboBoxItem>
+        <TextBlock Grid.Row="0" Grid.Column="0">Study</TextBlock>
+        <ComboBox Grid.Row="0" Grid.Column="1" SelectedIndex="0" Name="Combo_Study" SelectionChanged="Combo_Study_SelectionChanged">
         </ComboBox>
         <Button Grid.Row="0" Grid.Column="2" Click="Button_Add_Click">Add</Button>
         <Button Grid.Row="0" Grid.Column="3" Click="Button_Remove_Click">Remove</Button>
 
-        <TextBlock Grid.Row="1" Grid.Column="0">Save progress</TextBlock>
-        <CheckBox Grid.Row="1" Grid.Column="1" Name="Checkbox_SaveProgress" IsChecked="True"></CheckBox>
-
-        <Button Grid.Row="2" Grid.Column="0" Click="Button_SaveToUserData_Click">Save to User Data</Button>
-        <Button Grid.Row="2" Grid.Column="1" Click="Button_LoadFromUserData_Click">Load from User Data</Button>
-
-        <Button Grid.Row="2" Grid.Column="2" Grid.ColumnSpan="2" Click="Button_ConfigureFromApp_Click">Configure from App</Button>
+        <Button Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2" Name="Button_StartSession"  Click="Button_StartSession_Click">Start Session</Button>
+        <Button Grid.Row="1" Grid.Column="2" Grid.ColumnSpan="2" Click="Button_RunExplorer_Click">Run Explorer</Button>
+        <TextBlock Grid.Row="0" Grid.RowSpan="3" Grid.Column="5" Name="TextBlock_Info">Study info</TextBlock>
     </Grid>
 </UserControl>
