implement dataset creation tool

--- a/BlindConfigurationTester/SessionWindow.xaml
+++ b/BlindConfigurationTester/SessionWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:BlindConfigurationTester"
         mc:Ignorable="d"
-        Title="SessionWindow"  WindowState="Maximized" Closing="WindowClosing">
+        Title="SessionWindow"  Background="LightGray" WindowState="Maximized" Closing="WindowClosing">
     <Canvas Name="Canvas">
         <TextBlock x:Name="TextBlock_PointsLeft" HorizontalAlignment="Right" Canvas.Top="50"/>
         <Ellipse Width="10" Height="10" Fill="Red" Name="Circle" MouseDown="NextPoint"></Ellipse>
