--- a/BlindConfigurationTester/MainWindow.xaml
+++ b/BlindConfigurationTester/MainWindow.xaml
@@ -30,12 +30,17 @@
 
         <TextBlock Grid.ColumnSpan="2" HorizontalAlignment="Center" Grid.Row="0">Configuration setup:</TextBlock>
         <Border BorderBrush="Black" BorderThickness="2" Grid.ColumnSpan="2" Grid.Row="1">
-            <local:ConfigurationControl HorizontalAlignment="Center" Padding="10" x:Name="Configuration"></local:ConfigurationControl>
+            <local:ConfigurationControl HorizontalAlignment="Stretch" Padding="10" x:Name="Configuration"></local:ConfigurationControl>
         </Border>
 
         <TextBlock Grid.ColumnSpan="2" HorizontalAlignment="Center" Grid.Row="2">Study setup:</TextBlock>
         <Border BorderBrush="Black" BorderThickness="2" Grid.ColumnSpan="2" Grid.Row="3">
             <local:StudySetupControl HorizontalAlignment="Stretch" Padding="10" x:Name="Study"></local:StudySetupControl>
+        </Border>
+        
+        <TextBlock Grid.ColumnSpan="2" HorizontalAlignment="Center" Grid.Row="4">Study setup:</TextBlock>
+        <Border BorderBrush="Black" BorderThickness="2" Grid.ColumnSpan="2" Grid.Row="5">
+            <local:DataSetSetupControl HorizontalAlignment="Stretch" Padding="10" x:Name="DataSet"></local:DataSetSetupControl>
         </Border>
 
     </Grid>
