--- a/eye_tracking_mouse/ui/CalibrationWindow.xaml
+++ b/eye_tracking_mouse/ui/CalibrationWindow.xaml
@@ -30,7 +30,7 @@
         <Grid Width="{Binding Path=ActualWidth, RelativeSource={RelativeSource AncestorType=Canvas}}" Canvas.Top="50">
             <TextBlock   HorizontalAlignment="Center" TextAlignment="Center" > CALIBRATION VIEW</TextBlock>
         </Grid>
-        <TextBlock Canvas.Right="100" Canvas.Bottom="100" Name ="Description"></TextBlock>
+        <TextBlock Canvas.Right="100" Canvas.Bottom="100" Name ="Description">DESCRIPTION</TextBlock>
         <Grid Canvas.Right="100" Canvas.Top="100" Width="200" Height="100" Name="CurrentHeadPositionColor" Background="RED">
             <TextBlock TextAlignment="Center"  Background="Gray" VerticalAlignment="Top">CURRENT HEAD <LineBreak/> POSITION COLOR</TextBlock>
         </Grid>
