--- a/BlindConfigurationTester/CalibrationModeGeneratorWindow.xaml
+++ b/BlindConfigurationTester/CalibrationModeGeneratorWindow.xaml
@@ -5,8 +5,8 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:BlindConfigurationTester"
         mc:Ignorable="d"
-        Title="CalibrationModeGeneratorWindow" Height="450" Width="800">
-    <Grid>
+        Title="CalibrationModeGeneratorWindow" Height="450" Width="800"  SizeToContent="WidthAndHeight">
+    <Grid HorizontalAlignment="Center" VerticalAlignment="Center">
         <Grid.RowDefinitions>
             <RowDefinition></RowDefinition>
             <RowDefinition></RowDefinition>
