--- a/BlindConfigurationTester/CalibrationModeGeneratorWindow.xaml
+++ b/BlindConfigurationTester/CalibrationModeGeneratorWindow.xaml
@@ -5,19 +5,24 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:BlindConfigurationTester"
         mc:Ignorable="d"
-        Title="CalibrationModeGeneratorWindow" Height="450" Width="800"  SizeToContent="WidthAndHeight">
+        Title="CalibrationModeGeneratorWindow" Height="450" Width="800" SizeToContent="WidthAndHeight">
     <Grid HorizontalAlignment="Center" VerticalAlignment="Center">
         <Grid.RowDefinitions>
             <RowDefinition></RowDefinition>
             <RowDefinition></RowDefinition>
             <RowDefinition></RowDefinition>
             <RowDefinition></RowDefinition>
-            <RowDefinition></RowDefinition>
+            <RowDefinition Height="auto"></RowDefinition>
         </Grid.RowDefinitions>
-        <TextBlock Name="Text_ProgressInfo"></TextBlock>
-        <TextBlock Grid.Row="1" Name="Text_GlobalBestModeInfo"></TextBlock>
-        <TextBlock Grid.Row="2" Name="Text_LocalBestModeInfo"></TextBlock>
-        <TextBlock Grid.Row="3" Name="Text_LastIterationUtilityDelta"></TextBlock>
-        <TextBlock Grid.Row="4" Name="Text_LastTestResult"></TextBlock>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition></ColumnDefinition>
+            <ColumnDefinition></ColumnDefinition>
+        </Grid.ColumnDefinitions>
+    <TextBlock Name="Text_ProgressInfo"></TextBlock>
+        <TextBlock Grid.Row="1" Grid.ColumnSpan="2" Name="Text_GlobalBestModeInfo"></TextBlock>
+        <TextBlock Grid.Row="2" Grid.ColumnSpan="2" Name="Text_LocalBestModeInfo"></TextBlock>
+        <TextBlock Grid.Row="3" Grid.ColumnSpan="2" Name="Text_LastIterationUtilityDelta"></TextBlock>
+        <TextBlock Grid.Row="4" Grid.Column="1" Name="Text_LastTestResult" Background="LightBlue"></TextBlock>
+        <TextBlock Grid.Row="4" Grid.Column="0" Name="Text_CurrentPermutation" Background="LightGray"></TextBlock>
     </Grid>
 </Window>
