--- a/BlindConfigurationTester/DataSetSetupControl.xaml
+++ b/BlindConfigurationTester/DataSetSetupControl.xaml
@@ -39,7 +39,8 @@
         <Button Grid.Row="1" Grid.Column="2" Grid.ColumnSpan="1" Click="Button_RunExplorer_Click">Run Explorer</Button>
         <Button Grid.Row="1" Grid.Column="3" Grid.ColumnSpan="1" Click="Button_TestConfiguration_Click">Test Configuration on Data Set</Button>
         <Button Grid.Row="2" Grid.Column="3" Grid.ColumnSpan="1" Click="Button_TestConfigurationVisually_Click">Test Configuration Visually</Button>
-        <Button Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="3" Click="Button_GenerateConfigurationOnData_Click">Generate Configuration On Collected Data</Button>
+        <Button Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="2" Click="Button_GenerateConfigurationOnData_Click">Generate Configuration</Button>
+        <Button Grid.Row="2" Grid.Column="2" Grid.ColumnSpan="1" Click="Button_GenerateConfigurationManually_Click">Generate Manually</Button>
         <TextBlock Grid.Row="0" Grid.RowSpan="3" Grid.Column="5" Name="TextBlock_Info">Data Set info</TextBlock>
     </Grid>
 </UserControl>
