--- a/BlindConfigurationTester/ManualVisualisationWindow/OptionControl.xaml
+++ b/BlindConfigurationTester/ManualVisualisationWindow/OptionControl.xaml
@@ -7,15 +7,15 @@
              mc:Ignorable="d">
     <Grid>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="100"></ColumnDefinition>
+            <ColumnDefinition Width="200"></ColumnDefinition>
             <ColumnDefinition></ColumnDefinition>
-            <ColumnDefinition></ColumnDefinition>
+            <ColumnDefinition Width="30"></ColumnDefinition>
             <ColumnDefinition></ColumnDefinition>
             <ColumnDefinition></ColumnDefinition>
         </Grid.ColumnDefinitions>
         <TextBlock Grid.Column="0" Name="Text_OptionName">Option</TextBlock>
         <Button Grid.Column="1" Name="Button_Decrement" Click="Button_Decrement_Click">&lt;</Button>
-        <TextBlock Grid.Column="2" Name="Text_Value">0</TextBlock>
+        <TextBlock HorizontalAlignment="Center" Grid.Column="2" Name="Text_Value">0</TextBlock>
         <Button Grid.Column="3" Name="Button_Increment" Click="Button_Increment_Click">&gt;</Button>
         <CheckBox Grid.Column="4" Name="CheckBox_Visualize" Checked="CheckBox_Changed" Unchecked="CheckBox_Changed"></CheckBox>
     </Grid>
